# Libusbpp

./: .gitignore  CMakeLists.txt  Libusb++.sln  Libusb++.vcxproj  Libusb++.vcxproj.filters  Makefile  device.asm  deviceimpl.asm  libusbimpl.asm  libusbpp.asm  usbexception.asm
LibusbTest/: LibusbTest.cpp  LibusbTest.vcxproj  LibusbTest.vcxproj.filters  ReadMe.txt  stdafx.cpp
cmake/: pkg-config.pc.cmake
examples/: CMakeLists.txt  LibusbTest.cpp
headers/: CMakeLists.txt  Configuration.h  Endpoint.h  Endpointdefs.h  Interface.h  Transfer.h  TransferThread.h  Transferdefs.h  device.h  libusbpp.h  libusbpp.hpp  usbexception.h
headers/libusbpp/: Interface.hpp  Transfer.hpp
src/: CMakeLists.txt  Configuration.cpp  ConfigurationImpl.cpp  ConfigurationImpl.h  ConfigurationImpl.hpp  Device.cpp  DeviceImpl.cpp  DeviceImpl.hpp  Endpoint.cpp  EndpointImpl.cpp  EndpointImpl.h  EndpointImpl.hpp  Exception.cpp  Interface.cpp  InterfaceImpl.cpp  InterfaceImpl.hpp  Interfaceimpl.h  LibusbImpl.cpp  LibusbImpl.hpp  Transfer.cpp  TransferImpl.cpp  TransferImpl.h  TransferImpl.hpp  TransferThread.cpp  Wideconvert.cpp  device.cpp  deviceimpl.cpp  deviceimpl.h  endpointimpl.cpp  interface.cpp  interfaceimpl.cpp  libusbcom.h  libusbimpl.cpp  libusbimpl.h  libusbpp.cpp  usbexception.cpp  wideconvert.cpp  wideconvert.h
test/: CMakeLists.txt
